Added a small RE text
Added a small RE text

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ h1 {
     font-weight: 700;
     font-size: 4em;            
 }
+h2 {
+    font-weight: 700;
+    font-size: 3em;            
+}
 a {
     color: #8855FF;    
 }
